Adjust image animation delay. Set z-index for fixed buttons.

--- a/src/styles/blocks/_fixed-buttons.sass
+++ b/src/styles/blocks/_fixed-buttons.sass
@@ -2,6 +2,7 @@ section.fixed-buttons
   display: flex
   // flex-direction: column
   position: fixed
+  z-index: 100
   +inner-offset(right, bottom)
   +inner-offset(gap)
 
