--- a/src/styles/blocks/_welcome.sass
+++ b/src/styles/blocks/_welcome.sass
@@ -35,20 +35,26 @@ section.welcome
     margin-right: auto
     text-align: center
 
-  .text-1, .text-2, .text-3
+  .text-1, .text-2, .text-3, .text-4, .text-5
     opacity: 0
 
     +large
       font-size: 18px
 
   .text-1
-    animation: fadeIn 1s ease-in-out forwards
+    animation: fadeIn .5s ease-in-out forwards
 
   .text-2
-    animation: fadeIn 1s ease-in-out 5s forwards
+    animation: fadeIn .5s ease-in-out 1s forwards
 
   .text-3
-    animation: fadeIn 1s ease-in-out 10s forwards
+    animation: fadeIn .5s ease-in-out 2s forwards
+
+  .text-4
+    animation: fadeIn .5s ease-in-out 3s forwards
+
+  .text-5
+    animation: fadeIn .5s ease-in-out 4s forwards
 
   .images
     position: relative
